--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				
 			</div>
 
-			<button class="btn-action">Go home now</button>
+			<a class="btn-action" href="">Go home now</a>
 
 		</div>
 		
